refactor logging, handle time out exception on message generation